# remote-caching

./: .gitignore  README.md  REAMDE.md
java-app/: Dockerfile  settings.gradle
java-app/app/: build.gradle
java-app/app/src/main/java/io/engineeringwithalex/app/: App.java
java-app/app/src/test/java/io/engineeringwithalex/app/: AppTest.java
python-app/: Dockerfile  pyproject.toml
terraform/: iam.tf  outputs.tf  s3.tf  variables.tf
